change projects and removed filter

--- a/src/index.html
+++ b/src/index.html
@@ -104,9 +104,9 @@
                 </div>
                <div data-modal="modal2" class="project-borders" data-aos="fade-up" data-aos-offset= "150" data-aos-duration="1000">
                     <div class="project-overlay">
-                        <p>Red Hoodie</p>
+                        <p>Interactive Photo Gallery</p>
                     </div>
-                    <img src="data/img/red.PNG" alt="Project2 Picture">
+                    <img src="data/img/gallery.png" alt="Project2 Picture">
                 </div>
                  <div data-modal="modal3" class="project-borders" data-aos="fade-left" data-aos-offset= "150" data-aos-duration="1000">
                     <div class="project-overlay">
@@ -122,9 +122,9 @@
                 </div>
                 <div data-modal="modal5" class="project-borders" data-aos="fade-up" data-aos-offset= "100" data-aos-duration="1000">
                     <div class="project-overlay">
-                        <p>Picture Portfolio</p>
+                        <p>Portfolio</p>
                     </div>
-                    <img src="data/img/picture.png" alt="Project5 Picture">
+                    <img src="data/img/zaid.png" alt="Project5 Picture">
                 </div>
                 <div data-modal="modal6" class="project-borders" data-aos="fade-left" data-aos-offset= "100" data-aos-duration="1000">
                     <div class="project-overlay">
@@ -158,15 +158,15 @@
                 
                 <i class="fas fa-times"></i>
             <div class="overlay">
-                <img src="data/img/red.PNG" alt="Project2 Picture" class="img-adjustment">
+                <img src="data/img/gallery.png" alt="Project2 Picture" class="img-adjustment">
                 <div class="overlay-content">
-                    <h2>Red Hoodie</h2>
-                    <p>I have created a blur filter on this picture. 
-                        See the effect kick in by moving the cursor anywhere except the home screen. 
-                        I have also used media queries to make this responsive for mobile and tablet screens.</p>
+                    <h2>Interactive Photo Gallery</h2>
+                    <p>This is a Picture Gallery, made through Baguette Box Javascript Library, 
+                        with functionality to search images based on their caption. 
+                        I have created using HTML, CSS, and JavaScript.</p>
                     <ul class="code-links">
-                        <li><a href="https://github.com/ZaidKhan144/RedHoodieBlurEffect" target="_blank">Code</a></li>
-                        <li><a href="https://zaidkhan144.github.io/RedHoodieBlurEffect/" target="_blank">Live</a></li>
+                        <li><a href="https://github.com/ZaidKhan144/interactive-photo-gallery" target="_blank">Code</a></li>
+                        <li><a href="https://zaidkhan144.github.io/interactive-photo-gallery/" target="_blank">Live</a></li>
                     </ul>
                 </div>
             </div>
@@ -180,7 +180,8 @@
                     <h2>Employee Directory</h2>
                     <p>In this project, I have used the Random User 
                         Generator API to build 12 employees directory for a startup company. For user accessibility,
-                        I have also given a search functionality and a slider to move through employees.</p>
+                        I have also given a search functionality and a slider to move through employees. 
+                        I have created using HTML, CSS, and JavaScript.</p>
                     <ul class="code-links">
                         <li><a href="https://github.com/ZaidKhan144/employee-directory" target="_blank">Code</a></li>
                         <li><a href="https://zaidkhan144.github.io/employee-directory/" target="_blank">Live</a></li>
@@ -196,7 +197,8 @@
                     <div class="overlay-content">
                         <h2>Motorcycle Fanatic</h2>
                         <p>In this project, I have implemented a parallax design for BMW R nineT. 
-                            It was hard to ignore this after being a motorcycle admirer. </p>
+                            It was hard to ignore this after being a motorcycle admirer. 
+                            I have created using HTML and CSS.</p>
                         <ul class="code-links links-adjustments">
                             <li><a href="https://github.com/ZaidKhan144/MotorcycleParallax" target="_blank">Code</a></li>
                             <li><a href="https://zaidkhan144.github.io/MotorcycleParallax/" target="_blank">Live</a></li>
@@ -208,15 +210,15 @@
                     
                     <i class="fas fa-times"></i>
                 <div class="overlay">
-                    <img src="data/img/picture.png" alt="Project5 Picture">
+                    <img src="data/img/zaid.png" alt="Project5 Picture">
                     <div class="overlay-content">
-                        <h2>Picture Portfolio</h2>
-                        <p>I wanted to create a single one-page picture portfolio. 
-                            So I gathered some of my favorite pictures from pexels, 
-                            put them together, and made a beautiful yet simple design.</p>
+                        <h2>Portfolio</h2>
+                        <p>The idea behind this project was to showcase all the creations that I made recently. 
+                            Being minimalistic, I wanted to keep the design clean and clear by using the 60/30/10 rule. 
+                            I have created using SASS, JavaScript, jQuery, and Webpack. </p>
                         <ul class="code-links">
-                            <li><a href="https://github.com/ZaidKhan144/picture-portfolio" target="_blank">Code</a></li>
-                            <li><a href="https://zaidkhan144.github.io/picture-portfolio/" target="_blank">Live</a></li>
+                            <li><a href="https://github.com/ZaidKhan144/portfolio-webpack-html-css" target="_blank">Code</a></li>
+                            <li><a href="https://www.zaidikhan.com/" target="_blank">Live</a></li>
                         </ul>
                     </div>
                 </div>
@@ -228,7 +230,9 @@
                     <img src="data/img/video.png" alt="Project6 Picture">
                     <div class="overlay-content">
                         <h2>Video Portfolio</h2>
-                        <p>I make short cinematic music videos, so I have created this portfolio to showcase my video work. </p>
+                        <p>I make short cinematic music videos, so I have build this portfolio to showcase my video work. 
+                            I have created using HTML and CSS.
+                        </p>
                         <ul class="code-links links-adjustments">
                             <li><a href="https://github.com/ZaidKhan144/video-portfolio" target="_blank">Code</a></li>
                             <li><a href="https://zaidkhan144.github.io/video-portfolio/" target="_blank">Live</a></li>
