edit projects content

--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,7 @@
                     <h2>Interactive Photo Gallery</h2>
                     <p>This is a Picture Gallery, made through Baguette Box Javascript Library, 
                         with functionality to search images based on their caption. 
-                        I have created using HTML, CSS, and JavaScript.</p>
+                        I have created this using HTML, CSS, and JavaScript.</p>
                     <ul class="code-links">
                         <li><a href="https://github.com/ZaidKhan144/interactive-photo-gallery" target="_blank">Code</a></li>
                         <li><a href="https://zaidkhan144.github.io/interactive-photo-gallery/" target="_blank">Live</a></li>
@@ -181,7 +181,7 @@
                     <p>In this project, I have used the Random User 
                         Generator API to build 12 employees directory for a startup company. For user accessibility,
                         I have also given a search functionality and a slider to move through employees. 
-                        I have created using HTML, CSS, and JavaScript.</p>
+                        I have created this using HTML, CSS, and JavaScript.</p>
                     <ul class="code-links">
                         <li><a href="https://github.com/ZaidKhan144/employee-directory" target="_blank">Code</a></li>
                         <li><a href="https://zaidkhan144.github.io/employee-directory/" target="_blank">Live</a></li>
@@ -198,7 +198,7 @@
                         <h2>Motorcycle Fanatic</h2>
                         <p>In this project, I have implemented a parallax design for BMW R nineT. 
                             It was hard to ignore this after being a motorcycle admirer. 
-                            I have created using HTML and CSS.</p>
+                            I have created this using HTML and CSS.</p>
                         <ul class="code-links links-adjustments">
                             <li><a href="https://github.com/ZaidKhan144/MotorcycleParallax" target="_blank">Code</a></li>
                             <li><a href="https://zaidkhan144.github.io/MotorcycleParallax/" target="_blank">Live</a></li>
@@ -215,7 +215,7 @@
                         <h2>Portfolio</h2>
                         <p>The idea behind this project was to showcase all the creations that I made recently. 
                             Being minimalistic, I wanted to keep the design clean and clear by using the 60/30/10 rule. 
-                            I have created using SASS, JavaScript, jQuery, and Webpack. </p>
+                            I have created this using SASS, JavaScript, jQuery, and Webpack. </p>
                         <ul class="code-links">
                             <li><a href="https://github.com/ZaidKhan144/portfolio-webpack-html-css" target="_blank">Code</a></li>
                             <li><a href="https://www.zaidikhan.com/" target="_blank">Live</a></li>
@@ -231,7 +231,7 @@
                     <div class="overlay-content">
                         <h2>Video Portfolio</h2>
                         <p>I make short cinematic music videos, so I have build this portfolio to showcase my video work. 
-                            I have created using HTML and CSS.
+                            I have created this using HTML and CSS.
                         </p>
                         <ul class="code-links links-adjustments">
                             <li><a href="https://github.com/ZaidKhan144/video-portfolio" target="_blank">Code</a></li>
