react skill added

--- a/src/index.html
+++ b/src/index.html
@@ -50,8 +50,8 @@
             <div class="skills" class="skills" data-aos="fade-right" data-aos-offset= "100" data-aos-duration="1000">
                 <ul class="lang">
                     <div class="wrap">
-                        <i class="fab fa-html5"></i>
-                        <li>HTML</li>
+                        <i class="fab fa-react"></i>
+                        <li class="li-react">React</li>
                     </div>
 
                     <div class="wrap">
