--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,9 @@
                 <li><a class="page-scroll" href="#about">About</a></li>
                 <li><a class="page-scroll" href="#portfolio">Projects</a></li>
                 <li><a class="page-scroll" href="#contact">Contact</a></li>
+                <li><a class="page-scroll" target="_blank" 
+                    href="https://drive.google.com/file/d/1ngLyDnmFJZbgQPyf7LO9igzRdlshfgOi/view?usp=sharing"
+                    >Resume</a></li>
         </ul>
     </nav>
     </div>
@@ -163,12 +166,12 @@
                 <div class="overlay-content">
                     <h2>Memory GIFs Game</h2>
                     <p>This memory game is going to present six random gifs on screen. 
-                        I have used giphy API to render gifs. If your selected gif is different 
+                        I have used giphy API to render gifs. If your selected GIF is different 
                         from the previous ones you chose, your score will increase, and a new set of 
-                        random gifs will generate. I have created this in <span>React</span>. </p>
+                        random GIFs will generate. I have created this in <span>React</span>. </p>
                     <ul class="code-links">
                         <li><a href="https://github.com/ZaidKhan144/memory-game" target="_blank">Code</a></li>
-                        <li><a href="https://zaidkhan144.github.io/memory-game/" target="_blank">Play</a></li>
+                        <li><a href="https://zaidkhan144.github.io/memory-game/" target="_blank">Live</a></li>
                     </ul>
                 </div>
             </div>
@@ -198,13 +201,13 @@
                     <img src="data/img/game.png" alt="Project4 Picture">
                     <div class="overlay-content">
                         <h2>Words Guessing Game</h2>
-                        <p>It's going to give a random phrase at every turn, and you only get 
-                            five lives to survive. I have written this in <span>HTML</span>, 
+                        <p>A guessing game that will present random US State name with five lives to survive. 
+                            I have written this in <span>HTML</span>, 
                             <span>CSS</span>, <span>JavaScript</span>,
                             and used <span>jQuery</span> for animations.</p>
                         <ul class="code-links links-adjustments">
                             <li><a href="https://github.com/ZaidKhan144/game-show-app" target="_blank">Code</a></li>
-                            <li><a href="https://zaidkhan144.github.io/game-show-app/" target="_blank">Play</a></li>
+                            <li><a href="https://zaidkhan144.github.io/game-show-app/" target="_blank">Live</a></li>
                         </ul>
                     </div>
                 </div>
