--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     <header>
         <div class="home-content">
             <h1>Hi, I'm Zaid</h1>
-            <p class="title">Frontend Developer</p>
+            <p class="title">Front End Developer</p>
         </div>
     </header>
     
@@ -42,7 +42,7 @@
          <div class="about-design" >
         <div class="about-content" data-aos="fade-up" data-aos-offset= "200" data-aos-duration="1000">
             <p>Hello again, I'm Zaid, from Houston, TX.</p>
-            <p>I'm a Frontend Developer who loves to create visually-pleasing and accessible applications. 
+            <p>I'm a Front End Developer who loves to create visually-pleasing and accessible applications. 
                 I'm eager to bring my problem solving and analytical skills that I've acquired from my Software Quality Assurance 
                 experience to the world of Web Development. </p>
                 <p>Always pushing myself to grow and learn, and I look forward 
