--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
                 <li><a class="page-scroll" href="#about">About</a></li>
                 <li><a class="page-scroll" href="#portfolio">Projects</a></li>
                 <li><a class="page-scroll" href="#contact">Contact</a></li>
-                <li><a class="page-scroll" target="_blank" 
+                <!-- <li><a class="page-scroll" target="_blank" 
                     href="https://drive.google.com/file/d/1ngLyDnmFJZbgQPyf7LO9igzRdlshfgOi/view?usp=sharing"
-                    >Resume</a></li>
+                    >Resume</a></li> -->
         </ul>
     </nav>
     </div>
