--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
+    <meta name="description" content="_" />
+    <meta name="title" property="og:title" content="_" />
+    <meta property="og:type" content="_" />
+    <meta name="image" property="og:image" content="https://i.postimg.cc/SsLMZvJm/Zaid-Khan.png" />
+    <meta name="description" property="og:description" content="_" /><meta name="author" content="_" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="data/img/favicon.ico"/> 
