title change of emp directory

--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,7 @@
                 </div>
                  <div data-modal="modal3" class="project-borders" data-aos="fade-left" data-aos-offset= "150" data-aos-duration="1000">
                     <div class="project-overlay">
-                        <p>Employee Directory</p>
+                        <p>Awesome Startup</p>
                     </div>
                     <img src="data/img/employee.png" alt="Project3 Picture">
                 </div>
@@ -188,7 +188,7 @@
             <div class="overlay">
                 <img src="data/img/employee.png" alt="Project3 Picture" class="img-adjustment">
                 <div class="overlay-content">
-                    <h2>Employee Directory</h2>
+                    <h2>Awesome Startup</h2>
                     <p>In this project, I have used the Random User 
                         Generator API to build twelve employees directory for a startup company. For user accessibility,
                         I have also given a search functionality and a slider to move through employees. 
