thumbnail change emp dir

--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,7 @@
                     <div class="project-overlay">
                         <p>Awesome Startup</p>
                     </div>
-                    <img src="data/img/employee.png" alt="Project3 Picture">
+                    <img src="data/img/startup.png" alt="Project3 Picture">
                 </div>
                 <div data-modal="modal4" class="project-borders" data-aos="fade-right" data-aos-offset= "100" data-aos-duration="1000" >
                     <div class="project-overlay">
@@ -186,7 +186,7 @@
                 
                 <i class="fas fa-times"></i>
             <div class="overlay">
-                <img src="data/img/employee.png" alt="Project3 Picture" class="img-adjustment">
+                <img src="data/img/startup.png" alt="Project3 Picture" class="img-adjustment">
                 <div class="overlay-content">
                     <h2>Awesome Startup</h2>
                     <p>In this project, I have used the Random User 
