uptown skate shop description

--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
                 <img src="data/img/skate.png" alt="Project1 Picture">
                 <div class="overlay-content">
                     <h2>Uptown Skate Shop</h2>
-                    <p>It's an e-commerce skateboard website with all the shopping cart 
+                    <p>An E-commerce skateboard website with all the shopping cart 
                         functionalities. I have created this in <span>react</span>. For styling, 
                         I have used <span>styled-components</span>, and for animation, I have used 
                         the <span>framer-motion</span> library. </p>
