suspect gif thumbnail change

--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
                     <div class="project-overlay">
                         <p>Suspect GIFs</p>
                     </div>
-                    <img src="data/img/gifs.png" alt="Project2 Picture">
+                    <img src="data/img/suspect.png" alt="Project2 Picture">
                 </div>
                  <div data-modal="modal3" class="project-borders" data-aos="fade-left" data-aos-offset= "150" data-aos-duration="1000">
                     <div class="project-overlay">
@@ -167,7 +167,7 @@
                 
                 <i class="fas fa-times"></i>
             <div class="overlay">
-                <img src="data/img/gifs.png" alt="Project1 Picture">
+                <img src="data/img/suspect.png" alt="Project1 Picture">
                 <div class="overlay-content">
                     <h2>Suspect GIFs</h2>
                     <p>A memory game that is going to present six random GIFs on screen. 
