--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                 <li><a class="page-scroll" href="#portfolio">Projects</a></li>
                 <li><a class="page-scroll" href="#contact">Contact</a></li>
                 <li><a class="page-scroll" target="_blank" 
-                    href="https://drive.google.com/file/d/1lMlgte7UKqXWi-623YwVddecOwE3CvNh/view?usp=sharing"
+                    href="https://drive.google.com/file/d/1KfmqOOHR_arpMLJfSSCx8CpsETPO4B4F/view?usp=sharing"
                     >Resume</a></li>
         </ul>
     </nav>
@@ -273,9 +273,9 @@
            <div class="socials" data-aos="fade-up" data-aos-offset= "30" data-aos-duration="1000">
             <a href="https://github.com/ZaidKhan144" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://codepen.io/zaidik" target="_blank"><i class="fab fa-codepen"></i></a>  
-            <a href="https://www.linkedin.com/in/zaid-khan-9a4b964b/" target="_blank"><i class="fab fa-linkedin"></i></a> 
+            <a href="https://www.linkedin.com/in/zaidikhan/" target="_blank"><i class="fab fa-linkedin"></i></a> 
             <a href="https://twitter.com/ZaidIrfanKhan" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://drive.google.com/file/d/1lMlgte7UKqXWi-623YwVddecOwE3CvNh/view?usp=sharing" target="_blank"><i class="far fa-file"></i></a>    
+            <a href="https://drive.google.com/file/d/1KfmqOOHR_arpMLJfSSCx8CpsETPO4B4F/view?usp=sharing" target="_blank"><i class="far fa-file"></i></a>    
             </div>
     </section> 
 
