portfolio link updated

--- a/src/index.html
+++ b/src/index.html
@@ -251,7 +251,7 @@
                             I have written this in <span>SASS</span>, <span>JavaScript</span>, <span>jQuery</span>, and <span>Webpack</span>. </p>
                         <ul class="code-links">
                             <li><a href="https://github.com/ZaidKhan144/portfolio-webpack-html-css" target="_blank">Code</a></li>
-                            <li><a href="https://www.zaidikhan.com/" target="_blank">Live</a></li>
+                            <li><a href="https://personal-web-v1.netlify.app/" target="_blank">Live</a></li>
                         </ul>
                     </div>
                 </div>
